src/objects/CRFMaster__c.object
<CustomObject>
    <fields>
        <fullName>CRFType__c</fullName>
        <label>CRFType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsApprovalRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharing_Level__c</fullName>
        <label>Sharing Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CRFMaster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRFType__c</columns>
        <columns>IsApprovalRequired__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CRF Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRFMasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>